--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ notifications:
     email: true
     slack: webhouseteam:82qu1PX5R5wkYNCW5x6fVlhu
 
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+
 script:
+  - yarn --version
   - cd ./experiments/framework_decoupled_v3/ 
   - yarn
   - yarn build
