--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -25,7 +25,7 @@
     "react-rte": "^0.11.0",
     "react-select": "^1.0.0-rc.5",
     "react-tinymce": "^0.6.0",
-    "react-toastify": "^2.0.0-rc.3",
+    "react-toastify": "^2.0.0",
     "react-virtualized": "^9.9.0",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
