--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -11,11 +11,11 @@
     "immutable": "^3.8.1",
     "js-file-download": "^0.4.1",
     "lodash": "^4.17.4",
+    "moment": "2.18.0",
     "odeum-ui": "^0.1.24",
     "polished": "^1.4.0",
     "react": "15.6.1",
     "react-addons-shallow-compare": "^15.6.0",
-    "universal-cookie": "^2.1.0",
     "react-datepicker": "^0.53.0",
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
@@ -36,7 +36,7 @@
     "styled-components": "^2.1.2",
     "styled-normalize": "^2.2.1",
     "typeface-source-sans-pro": "^0.0.35",
-    "moment": "2.18.0"
+    "universal-cookie": "^2.1.0"
   },
   "homepage": "",
   "devDependencies": {
