--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -12,7 +12,7 @@
     "js-file-download": "^0.4.1",
     "lodash": "^4.17.4",
     "moment": "2.18.0",
-    "odeum-ui": "^0.1.24",
+    "odeum-ui": "0.1.25",
     "polished": "^1.4.0",
     "react": "15.6.1",
     "react-addons-shallow-compare": "^15.6.0",
